# rda-python-globus

./: README.md  pyproject.toml
.github/workflows/: publish.yml  python-app.yml
scripts/: tacc_transfer.py
src/rda_python_globus/: file_management.py  list.py  main.py  task.py  task_management.py  transfer.py
src/rda_python_globus/lib/: __init__.py  auth.py  config.py
