[build-system]
requires = [
  "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "rda_python_globus"
version = "1.0.0"
authors = [
  { name="Thomas Cram", email="tcram@ucar.edu" },
]
description = "Tools for managing Globus transfers supporting the NSF NCAR Research Data Archive"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "globus_sdk",
]

[project.urls]
"Homepage" = "https://github.com/NCAR/rda-python-globus"

[project.scripts]
dsglobus = "rda_python_globus:main"
